# open2lisapi

./: ..gitignore.un~  .README.md.un~  .gitignore  .qiniu_pythonsdk_hostscache.json  .wsgi.py.un~  00.xlsx  00000.xlsx  1111.xlsx  11111.xlsx  123.xlsx  3333.xlsx  999.xlsx  README.md  TEMPLATE_CODE.md  bash_end.sh  bash_start.sh  install.sh  install_env.py  requirements.txt  setup.cfg  setup.py  wsgi.py  新合并.xlsx
E:\_CACHE/20230222/: AES基本工资 2023年1月(核(税).xls
crontab/: .db_backup_task.sh.un~  auto_clear_logs.sh  bash_template.sh  mysql_backup_task.sh
dbsql/: sql.sql
deploy/: __init__.py  config.py
deploy/bo/: __bo_template.py  __init__.py  api.py  bo_base.py  department.py  dtalk_message.py  dtalk_robot.py  enum.py  excel_result.py  excel_source.py  menu.py  office.py  office_pdf.py  qywx_message.py  qywx_robot.py  request.py  role.py  shortcut.py  sms.py  sqlbase.py  sysuser.py  sysuser_avatar.py  template.py
deploy/cli/: __init__.py  foo.py
deploy/delib/: __init__.py  dtalk_lib.py  excel_lib.py  file_lib.py  http_lib.py  image_lib.py  qywx_lib.py  store_lib.py
deploy/delibs/: __init__.py  excel_lib.py  file_lib.py  http_lib.py  image_lib.py  qywx_lib.py  store_lib.py
deploy/model/: __model_template.py  api.py  department.py  dtalk_message.py  dtalk_robot.py  enum.py  excel_result.py  excel_source.py  menu.py  model_template.py  office_pdf.py  qywx_message.py  qywx_robot.py  request.py  role.py  shortcut.py  sms.py  sqlbase.py  sysuser.py  sysuser_avatar.py
deploy/models/: api.py  base.py  enum.py  (+17 more)
etc/: supervisor_open2lisapi.conf  supervisord.conf
(+87 files in other folders)
