[metadata]
name = deploy
version = 1.0.1
author = pygo
author_email = gaoming971366@163.com
url = http://pygo2.top
summary = "OpenStack's setup automation in a reusable form"
license = Apache-2
python_requires= >=3.7,
classifier =
    Development Status :: 1 - Developing,
    Intended Audience :: Developers,
    Environment :: Web Environment,
    Framework :: Flask,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3.7,
    
keywords =
    python3
    sdk

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    deploy

[entry_points]
console_scripts =
    foo = deploy.cli:foo_entry_point

